feat: add auto-changelog for generating changelogs
Added the auto-changelog package and its related dependencies. Updated scripts in package.json to include a changelog generation command.

Signed-off-by: Sinclair <truly.sinclair@gmail.com>

--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "type": "module",
   "scripts": {
     "build": "tsup src",
-    "build:types": "openapi-typescript"
+    "build:types": "openapi-typescript",
+    "changelog": "auto-changelog"
   },
   "devDependencies": {
     "@types/node": "^22.15.21",
+    "auto-changelog": "^2.5.0",
     "tsup": "^8.5.0",
     "typescript": "^5.5.3"
   },
