fix(package.json): adjust changelog script for proper execution
Updated the changelog script to include the -p flag. This ensures proper generation of the changelog file.

Signed-off-by: Sinclair <truly.sinclair@gmail.com>

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsup src",
     "build:types": "openapi-typescript",
-    "changelog": "auto-changelog"
+    "changelog": "auto-changelog -p"
   },
   "devDependencies": {
     "@types/node": "^22.15.21",
