fix(package.json): update version script to include changelog
Revised the version script to run auto-changelog and stage the generated CHANGELOG.md file. This ensures changelog updates are automatically added to version commits.

Signed-off-by: Sinclair <truly.sinclair@gmail.com>

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsup src",
     "build:types": "openapi-typescript",
-    "changelog": "auto-changelog -p"
+    "version": "auto-changelog -p && git add CHANGELOG.md"
   },
   "devDependencies": {
     "@types/node": "^22.15.21",
