feat: add keywords, repository info, and roadmap updates
Add keywords and repository details to package.json for better metadata. Update README with a project roadmap.

Signed-off-by: Sinclair <truly.sinclair@gmail.com>

--- a/package.json
+++ b/package.json
@@ -2,6 +2,16 @@
   "name": "xsi-devkit",
   "version": "0.1.2",
   "description": "The Unofficial Cisco Broadworks Xtended Services Interface DevKit",
+  "keywords": [
+    "cisco",
+    "xsi",
+    "broadworks",
+    "broadsoft"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/trulysinclair/xsi-devkit"
+  },
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
